changed Docker image to centos:7

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,13 +1,14 @@
-FROM docker.io/fedora:25
+FROM docker.io/centos:7
 MAINTAINER Billy Holmes <billy@gonoph.net>
 COPY root/ /
 RUN	useradd -u 1000 ansible -U \
-	&& dnf update -y \
-	&& dnf remove -y vim-minimal \
-	&& dnf install -y \
+	&& yum update -y \
+	&& yum remove -y vim-minimal \
+	&& yum install -y epel-release \
+	&& yum install -y \
 	ansible \
 	bind-utils \
-	@development-tools \
+	@development \
 	libcurl-devel \
 	libxml2-devel \
 	libxslt-devel \
@@ -16,13 +17,15 @@ RUN	useradd -u 1000 ansible -U \
 	procps-ng \
 	python-devel \
 	python-firewall \
+	python2-pip \
 	python-pycurl \
 	redhat-rpm-config \
 	sudo \
 	vim \
 	vim-minimal \
-	&& dnf clean all
+	&& yum clean all
 RUN	id \
+	&& PYCURL_SSL_LIBRARY=nss pip install -U pycurl \
 	&& pip install -U pip \
 	&& pip install -U beautifulsoup4 \
 	&& pip install -U dnspython \
