fixed bug in vms-ovirt/clean task where it would return a 404.
Slight regression due to side effect of update in ovirtsdk4.

In ovirtsdk4 4.1.0 this code was changed in service.py:

  @@ -94,7 +94,7 @@
		   xmlreader.close()
	       if buf is not None:
		   buf.close()
  -        if fault is not None:
  +        if fault is not None or response.code >= 400:
	       Service._raise_error(response, fault)

This causes the ovirt utility in ansible to fail as part of it's normal remove
operations, as it performs these operations:

  * GET :vm_id:
  * DELETE :vm_id:
  * GET :vm_id:

The final GET worked in ovirtsdk4 4.0.4, as the 404 was silently ignored. Now
in 4.1.0 it raises an exception.

--- a/roles/vms-ovirt/tasks/clean.yml
+++ b/roles/vms-ovirt/tasks/clean.yml
@@ -6,10 +6,11 @@
     name: "{{ inventory_hostname }}"
     cluster: "{{ vm_cluster }}"
     state: absent
+  register: ovirt_vms
+  changed_when: ovirt_vms.changed | default(false) or (ovirt_vms.failed | default(false) and ovirt_vms.msg == 'HTTP response code is 404.')
+  failed_when: ovirt_vms.failed | default(false) and ovirt_vms.msg != 'HTTP response code is 404.'
   tags: [ovirt]
-  async: 60
-  poll: 5
 
 - name: Removing ssh key for host
   command: /usr/bin/ssh-keygen -R "{{ ansible_host }}"
-  tags: [ssh]
+  tags: [ssh,ovirt]
