Updated centos Dockerfile to include jmespath for json_query() and jinja2 at least 2.8.1 to gain access to dict() in templates

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -29,6 +29,8 @@ RUN	id \
 	&& pip install -U pip \
 	&& pip install -U beautifulsoup4 \
 	&& pip install -U dnspython \
+	&& pip install -U 'jinja2<2.9' \
+	&& pip install -U jmespath \
 	&& pip install -U netaddr \
 	&& pip install -U ovirt-engine-sdk-python \
 	&& pip install -U pyOpenSSL \
