--- a/roles/vms-ovirt/tasks/create.yml
+++ b/roles/vms-ovirt/tasks/create.yml
@@ -1,14 +1,9 @@
 # vim: sw=2 ai ts=102
 ---
-- block:
-  - name: grab personal ssh key
-    set_fact:
-      ssh_pub_key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
-  - name: add personal ssh key to authorized_ssh_keys
-    set_fact:
-      authorized_ssh_keys: |
-        - {{ ssh_pub_key }}
-  when: authorized_ssh_keys.root|default("") == ""
+- name: add personal ssh key to authorized_ssh_keys
+  set_fact:
+    authorized_ssh_keys: "- {{ lookup('file', '~/.ssh/id_rsa.pub') }}"
+  when: (authorized_ssh_keys|default("")).strip() == ""
   tags: [certificates]
   run_once: True
 
@@ -16,18 +11,18 @@
   ovirt_vms:
     auth: "{{ ovirt_auth }}"
     name: "{{ inventory_hostname }}"
-    template: "{{ vm_template }}"
+    template: "{{ vm_template | default(omit) }}"
     cluster: "{{ vm_cluster }}"
-    memory: "{{ vm_memory }}"
-    memory_guaranteed: "{{ vm_memory }}"
+    memory: "{{ vm_memory | default(omit) }}"
+    memory_guaranteed: "{{ vm_memory | default(omit) }}"
     high_availability: false
     clone: false
-    cpu_sockets: "{{ vm_cpucount }}"
-    operating_system: "{{ vm_osid }}"
-    type: "{{ vm_type }}"
+    cpu_sockets: "{{ vm_cpucount | default(omit) }}"
+    operating_system: "{{ vm_osid | default(omit) }}"
+    type: "{{ vm_type | default(omit) }}"
     state: present
-    nics: "{{ vm_nics }}"
-    cloud_init: "{{ vm_cloud_init }}"
+    nics: "{{ vm_nics | default(omit) }}"
+    cloud_init: "{{ vm_cloud_init | default(omit) }}"
     wait: true
   register: vm_created
   async: 185
