--- a/clean_vms.yml
+++ b/clean_vms.yml
@@ -17,3 +17,13 @@
   vars:
     vms_clean: true
   roles: [vms-ovirt]
+
+- name: Remove ssh keys
+  hosts: demo-vms
+  gather_facts: false
+  connection: local
+  serial: 1
+  tasks: 
+    - name: Removing ssh key for host
+      command: /usr/bin/ssh-keygen -R "{{ ansible_host }}"
+      tags: [ssh,ovirt]
