--- a/Docker/Dockerfile.in
+++ b/Docker/Dockerfile.in
@@ -1,8 +1,8 @@
 FROM docker.io/centos:7
 MAINTAINER Billy Holmes <billy@gonoph.net>
 COPY root/ /
-RUN	useradd -u 1000 ansible -U \
-	&& yum update -y \
+RUN	uname -a \
+	&& useradd -u 123456789 ansible -U \
 	&& yum remove -y vim-minimal \
 	&& yum install -y epel-release \
 	&& yum install -y \
