--- a/clean_vms.yml
+++ b/clean_vms.yml
@@ -19,11 +19,11 @@
   roles: [vms-ovirt]
 
 - name: Remove ssh keys
-  hosts: demo-vms
+  hosts: localhost
   gather_facts: false
   connection: local
-  serial: 1
   tasks: 
     - name: Removing ssh key for host
-      command: /usr/bin/ssh-keygen -R "{{ ansible_host }}"
+      command: /usr/bin/ssh-keygen -R "{{ hostvars[item].ansible_host }}"
       tags: [ssh,ovirt]
+      with_items: "{{ groups['demo-vms'] }}"
