added ability to configure regular RHEL systems without assumptions of being another role.

--- a/configure_vms.yml
+++ b/configure_vms.yml
@@ -34,3 +34,10 @@
   roles:
     - rhel
     - satellite-client
+#
+# now we can configure regular RHEL VMs
+- name: Configure rest of VMs 
+  hosts: demo-vms !satellites !routers !clients !capsules
+  connection: smart
+  roles:
+    - rhel
