--- a/roles/rhel/defaults/main.yml
+++ b/roles/rhel/defaults/main.yml
@@ -6,11 +6,12 @@ reboot_host: False
 lvm_mounts: []
 certificates: {}
 add_certificates: []
+extra_authorized_keys: []
 
-router_server: "{{ groups['routers'][0] }}"
-router_server_ip: "{{ hostvars[router_server].nic.ip | ipaddr('address')}}"
+router_server: "{{ groups.routers | default([]) | first | default(none) }}"
+router_server_ip: "{{ 'localhost' if not router_server else hostvars[router_server].nic.ip | ipaddr('address')}}"
 
-delegate_ip: "{{ 'localhost' if inventory_hostname in groups['routers'] else router_server_ip }}"
+delegate_ip: "{{ router_server_ip if inventory_hostname in groups.proxied else 'localhost' }}"
 
 # subscription register organization
 subscription_org: "{{ change_me_subscription_org }}"
