--- a/roles/vms-ovirt/defaults/main.yml
+++ b/roles/vms-ovirt/defaults/main.yml
@@ -8,6 +8,10 @@ ovirt_insecure: true
 
 ovirt_tag: demos
 
+router_server: "{{ groups.routers | default([]) | first | default(none) }}"
+router_server_ip: "{{ 'localhost' if not router_server else hostvars[router_server].nic.ip | ipaddr('address')}}"
+delegate_ip: "{{ router_server_ip if inventory_hostname in groups.proxied else 'localhost' }}"
+
 vm_rhel_template: rhel-guest-image-7.3-35.x86_64
 vm_rhel_atomic_template: rhel-atomic-cloud-7.3.1-1.x86_64.rhevm
 
