fixec bug in atomic host upgrade where it would show up as changed when there was no upgrade.

--- a/roles/rhel/tasks/upgrade.yml
+++ b/roles/rhel/tasks/upgrade.yml
@@ -20,5 +20,5 @@
   when: yum_upgrade.skipped | default(False) and atomic_test.stat.exists | default(False)
   register: atomic_upgrade
   changed_when: |
-    atomic_upgrade.skipped | default(False) and "\nNo upgrade available.\n" in atomic_upgrade.msg
+    atomic_upgrade.changed and "\nNo upgrade available.\n" not in atomic_upgrade.msg
   notify: reboot host
