--- a/create_vms.yml
+++ b/create_vms.yml
@@ -1,7 +1,7 @@
 # vim: sw=2 ai ts=10240
 ---
 - name: Provision Demo VMs
-  hosts: demo-vms
+  hosts: ovirt-hosts
   gather_facts: false
   connection: local
   roles:
