--- a/group_vars/demo-vms.yml
+++ b/group_vars/demo-vms.yml
@@ -6,13 +6,12 @@
 
 ansible_user: root
 
-user_password: "{{ ('redhat123 ' + range(500,1000)|random|string) | hash('sha1') }}"
 hostname: "{{ inventory_hostname }}.{{ domain_name }}"
 
 router_server: "{{ groups.routers | default([]) | first | default(none) }}"
 router_server_ip: "{{ 'localhost' if not router_server else hostvars[router_server].nic.ip | ipaddr('address')}}"
 
 # default memory for all VMs
-vm_memory: 2GiB
+# vm_memory: 2GiB
 # default template for all VMs
-vm_template: "{{ vm_rhel_template }}"
+# vm_template: "{{ vm_rhel_template }}"
